<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="com.astor.ryl.astor_conference.dialogs.mssql.MSSQLSettingsDialog" >

    <TextView
        android:id="@+id/settings_title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="@drawable/filled_border"
        android:gravity="center"
        android:padding="@dimen/activity_horizontal_margin"
        android:text="@string/settings_title"
        android:textColor="#FFFFFF" />

    <TextView
        android:id="@+id/settings_ip"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/settings_title"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:gravity="center"
        android:text="@string/settings_ip"
        android:textColor="#000000" />

    <EditText
        android:id="@+id/settings_ip_edit"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/settings_ip"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:gravity="center"
        android:textColor="#000000" />

    <TextView
        android:id="@+id/settings_network_name"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/settings_ip_edit"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:gravity="center"
        android:text="@string/settings_network_name"
        android:textColor="#000000" />

    <EditText
        android:id="@+id/settings_network_name_edit"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/settings_network_name"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:gravity="center"
        android:textColor="#000000" />

    <TextView
        android:id="@+id/settings_netowrk_pass"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/settings_network_name_edit"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:gravity="center"
        android:text="@string/settings_network_pass"
        android:textColor="#000000" />

    <EditText
        android:id="@+id/settings_network_pass_edit"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/settings_netowrk_pass"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:gravity="center"
        android:textColor="#000000" />

</RelativeLayout>