<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000" >

    <RelativeLayout
        android:id="@+id/main_title"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/title"
        android:background="@android:color/white" >

        <ImageView
            android:id="@+id/raspberry_logo"
            android:layout_width="@dimen/ras_logo"
            android:layout_height="@dimen/ras_logo"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:scaleType="fitXY"
            android:src="@drawable/raspberry_pi" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@id/raspberry_logo"
            android:orientation="vertical" >

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:text="@string/main_status"
                android:textColor="@android:color/black"
                android:textSize="@dimen/title_string" />

            <TextView
                android:id="@+id/main_status"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:text="@string/main_status_disconnected"
                android:textColor="#E10000"
                android:textSize="@dimen/title_string"
                android:textStyle="bold" />
        </LinearLayout>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@id/main_title"
        android:orientation="vertical"
        android:weightSum="3" >

        <LinearLayout
            android:id="@+id/main_connect"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="#C0C0C0"
            android:gravity="center_vertical"
            android:onClick="connect"
            android:orientation="horizontal"
            android:padding="@dimen/activity_horizontal_margin" >

            <ImageView
                android:id="@+id/main_connect_icon"
                android:layout_width="@dimen/icon"
                android:layout_height="@dimen/icon"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:src="@drawable/connect" />

            <TextView
                android:id="@+id/main_connect_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:lines="2"
                android:text="@string/main_connect"
                android:textColor="#FFFFFF"
                android:textSize="@dimen/title_string"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/main_steer"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="#C0C0C0"
            android:gravity="center_vertical"
            android:onClick="steer"
            android:orientation="horizontal"
            android:padding="@dimen/activity_horizontal_margin" >

            <ImageView
                android:layout_width="@dimen/icon"
                android:layout_height="@dimen/icon"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:src="@drawable/steer" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:lines="2"
                android:text="@string/main_steer"
                android:textColor="#FFFFFF"
                android:textSize="@dimen/title_string"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/main_settings"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="#C0C0C0"
            android:gravity="center_vertical"
            android:onClick="settings"
            android:orientation="horizontal"
            android:padding="@dimen/activity_horizontal_margin" >

            <ImageView
                android:layout_width="@dimen/icon"
                android:layout_height="@dimen/icon"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:src="@drawable/settings" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:text="@string/main_settings"
                android:textColor="#FFFFFF"
                android:textSize="@dimen/title_string"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>